--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ contourpy==1.2.1
 cycler==0.12.1
 fonttools==4.53.1
 graphviz==0.20.3
+joblib
 kiwisolver==1.4.5
 matplotlib==3.9.1.post1
 numpy==2.0.1
